# mdbook-file-search

./: Cargo.toml  README.md
docs/: book.toml
docs/src/: chapter_1.md
src/: main.rs
