[package]
name = "mdbook-file-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4"
semver = "1.0"
clap = "3.0.0-beta.5"
serde_json = "1.0.79"
regex = "1.5"
toml = "0.5.8"
relative-path = "1.6"
